--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ namex==0.1.0
 narwhals==1.42.1
 networkx==3.5
 numpy==2.1.3
-opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
 opt_einsum==3.4.0
 optree==0.16.0
 packaging==24.2
